# clauvolution

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
crates/clauvolution_app/: Cargo.toml
crates/clauvolution_app/assets/icons/: clauvolution.icns
crates/clauvolution_app/src/: main.rs  script.rs
crates/clauvolution_body/: Cargo.toml
crates/clauvolution_body/src/: lib.rs
crates/clauvolution_brain/: Cargo.toml
crates/clauvolution_brain/src/: lib.rs
crates/clauvolution_core/: Cargo.toml
crates/clauvolution_core/src/: lib.rs
crates/clauvolution_genome/: Cargo.toml
crates/clauvolution_genome/src/: lib.rs
crates/clauvolution_phylogeny/: Cargo.toml
crates/clauvolution_phylogeny/src/: lib.rs
crates/clauvolution_render/: Cargo.toml
crates/clauvolution_render/src/: lib.rs  screenshot_with_egui.rs
crates/clauvolution_sim/: Cargo.toml
crates/clauvolution_sim/src/: lib.rs  save.rs
crates/clauvolution_ui/: Cargo.toml
crates/clauvolution_ui/src/: lib.rs
crates/clauvolution_world/: Cargo.toml
crates/clauvolution_world/src/: lib.rs
docs/: ARCHITECTURE.md  DECISIONS.md  FEATURES.md  ROADMAP.md
docs/design/: creature-portrait.md
scripts/: build_icon.sh  build_macos_app.sh
tours/: demo.json  readme.json
