[workspace]
resolver = "2"
members = [
    "crates/clauvolution_app",
    "crates/clauvolution_core",
    "crates/clauvolution_genome",
    "crates/clauvolution_brain",
    "crates/clauvolution_body",
    "crates/clauvolution_world",
    "crates/clauvolution_sim",
    "crates/clauvolution_render",
    "crates/clauvolution_phylogeny",
    "crates/clauvolution_ui",
]

[profile.release]
incremental = true

[workspace.dependencies]
bevy = "0.15"
bevy_egui = "0.33"
egui_plot = "0.31"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
