[package]
name = "clauvolution_render"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
clauvolution_core = { path = "../clauvolution_core" }
clauvolution_genome = { path = "../clauvolution_genome" }
clauvolution_body = { path = "../clauvolution_body" }
clauvolution_world = { path = "../clauvolution_world" }
clauvolution_phylogeny = { path = "../clauvolution_phylogeny" }
