[package]
name = "clauvolution_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
egui_plot = { workspace = true }
clauvolution_core = { path = "../clauvolution_core" }
clauvolution_genome = { path = "../clauvolution_genome" }
clauvolution_phylogeny = { path = "../clauvolution_phylogeny" }
clauvolution_world = { path = "../clauvolution_world" }
